# synth

./: .gitignore  CMakeLists.txt  README.md  format.sh
include/: audiobuffer.h  audiomath.h  list.h  mem.h  midi_input.h  mix.h  moment.h  notedefs.h  osc.h  perlin.h  playback.h  synth.h  types.h  utils.h  wav.h
src/: audiobuffer.c  list.c  main.c  mem.c  midi_input.c  mix.c  moment.c  osc.c  perlin.c  playback.c  types.c  utils.c  wav.c
